tests/fsharp/typeProviders/negTests/EVIL_PROVIDER_ReturnsTypeWithIncorrectNameFromApplyStaticArguments.bsl

EVIL_PROVIDER_ReturnsTypeWithIncorrectNameFromApplyStaticArguments.fsx(6,39,6,145): typecheck error FS3057: The type provider 'Provider.EvilGeneratedProviderThatReturnsTypeWithIncorrectNameFromApplyStaticArguments' returned an invalid type from 'ApplyStaticArguments'. A type with name 'TheContainerType,Tag="J"' was expected, but a type with name 'TheContainerType' was returned.

EVIL_PROVIDER_ReturnsTypeWithIncorrectNameFromApplyStaticArguments.fsx(6,39,6,145): typecheck error FS3057: The type provider 'Provider.EvilGeneratedProviderThatReturnsTypeWithIncorrectNameFromApplyStaticArguments' returned an invalid type from 'ApplyStaticArguments'. A type with name 'TheContainerType,Tag="J"' was expected, but a type with name 'TheContainerType' was returned.

EVIL_PROVIDER_ReturnsTypeWithIncorrectNameFromApplyStaticArguments.fsx(8,41,8,58): typecheck error FS0039: The type 'TheGeneratedTypeJ' is not defined.

EVIL_PROVIDER_ReturnsTypeWithIncorrectNameFromApplyStaticArguments.fsx(8,79,8,96): typecheck error FS0039: The type 'Object' does not define the field, constructor or member 'TheGeneratedTypeJ'.
